--- a/ProyectoInge1/ProyectoInge1/Views/Usuarios/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Usuarios/Create.cshtml
@@ -45,9 +45,16 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-md-2">Telefono 1:</label>
+            <label class="col-lg-4">Contraseña:</label>
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.pass, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.pass, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-10">
                 @Html.EditorFor(model => model.modeloTelefono1.numero, new { htmlAttributes = new { @class = "form-control", placeholder = "88888888" } })
+            <label class="control-label col-md-2">Telefono 1:</label>
                 @Html.ValidationMessageFor(model => model.modeloTelefono1.numero, "", new { @class = "text-danger" })
             </div>
         </div>
