--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Index.cshtml
@@ -17,15 +17,46 @@
     <p>
         <div class="row">
 
-            <div class="col-lg-5">
-                Buscar por nombre: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+            <div class="col-lg-4">
+                <label class="control-label col-md-4">Proyectos:</label>
+                @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+
+
+
+                              @*
+        @Html.DropDownListFor(model => model.proyecto.lider, (SelectList)ViewBag.Desarrolladores, "Seleccionar Lider", new { @class = "control-label col-md-2" } );
+           @{
+            foreach (var Proj in Model )
+            {
+                        <option value=Proj.ReqFuncional.nomProyecto>
+                            @Html.DropDownListFor(, new[] { new SelectListItem() { Text = Proj.ReqFuncional.nomProyecto.ToString(), Value = Proj.ReqFuncional.nomProyecto } }, "--Fuente no asignada--", new { @class = "form-control" })
+
+                            @Html.DropDownList("Prueba", new[] { new SelectListItem() { Text = Proj.ReqFuncional.nomProyecto.ToString(), Value = Proj.ReqFuncional.nomProyecto } }, "--Escoger un Proyecto--", new { @class = "form-control" })
+                        </option>
+            }
+        }*@
                 <input class="btn btn-success" type="submit" value="Buscar" />
             </div>
-            <div class="col-lg-1 col-lg-pull-1">
-                <a class="btn btn-info" href="../Usuarios">Mostrar Todos</a>
+            <div class="col-lg-4">
+                <label class="control-label col-md-4">Requerimientos:</label>
+             @*   @{
+                    foreach (var Proj in Model)
+                    {
+                        <option value=Proj.ReqFuncional.nomProyecto>
+                            @Html.DropDownListFor(, new[] { new SelectListItem() { Text = Proj.ReqFuncional.nomProyecto.ToString(), Value = Proj.ReqFuncional.nomProyecto } }, "--Fuente no asignada--", new { @class = "form-control" })
+                            
+                            @Html.DropDownList("Prueba", new[] { new SelectListItem() { Text = Proj.ReqFuncional.nombre.ToString(), Value = Proj.ReqFuncional.nombre} }, "--Escoger un Requerimiento--", new { @class = "form-control" })
+                        </option>
+                    }
+                }*@
+                <input class="btn btn-success" type="submit" value="Buscar" />
             </div>
-            <div class="col-lg-2 col-lg-push-5">
-                <a class="btn btn-success" href="Usuarios/Create">Crear</a>
+
+            <div class="col-lg-1 col-lg-pull-1">
+                <a class="btn btn-info" href="../GestCambios">Mostrar Todos</a>
+            </div> 
+            <div class="col-lg-1 col-lg-pull-1">
+                <a class="btn btn-info" href="../Usuarios">Solicitudes</a>
             </div>
         </div>
     </p>
@@ -45,6 +76,9 @@
                 @Html.ActionLink("Proyecto", "Index", new { sortOrder = ViewBag.RolSortParm, currentFilter = ViewBag.CurrentFilter })
             </th>
             <th>
+                @Html.ActionLink("Solicitado por", "Index", new { sortOrder = ViewBag.RolSortParm, currentFilter = ViewBag.CurrentFilter })
+            </th>
+            <th>
                 @Html.ActionLink("Crear Solicitud", "Index", new { sortOrder = ViewBag.ProySortParm, currentFilter = ViewBag.CurrentFilter })
             </th>
         </tr>
@@ -52,7 +86,7 @@
     <tbody>
         @foreach (var item in Model)
         {
-          
+           
             <tr id='@(item.versionRF )' onclick="gotoDetails(this)">
                 <td>
                     @Html.DisplayFor(modelItem => item.versionRF )
@@ -65,7 +99,27 @@
                     @Html.DisplayFor(modelItem => item.nomProyecto )
             </td>
                 <td>
-                   
+                    @{
+                        var id = item.realizadoPor;
+
+                        var userList = ViewBag.userList as IEnumerable<ProyectoInge1.Models.Usuario>;
+                        foreach (var user in userList)
+                        {
+                            if (user.cedula.Equals(id))
+                            {
+                                var solicitante = user.nombre + " " + user.apellidos;
+                                @Html.DisplayFor(modelItem => solicitante);
+                            }
+                        }
+
+                }
+                  
+                </td>
+
+                <td>
+                    <div class="col-lg-2 col-lg-push-5">
+                        @Html.ActionLink("Crear","Create",null,new{ nomProyecto = item.ReqFuncional.nomProyecto,versionRF = item.versionRF, idReqFunc= item.ReqFuncional.id },null)
+                    </div>
                 </td>
 
         </tr>
