--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Details.cshtml
@@ -7,7 +7,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Detalles de Requerimiento</h2>
 
 <div class="elementoModificar" style="display:none">
     @using (Html.BeginForm())
