--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Index.cshtml
@@ -39,6 +39,7 @@
             </div>
             <div class="col-lg-4">
                 <label class="control-label col-md-4">Requerimientos:</label>
+                @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
              @*   @{
                     foreach (var Proj in Model)
                     {
