--- a/ProyectoInge1/ProyectoInge1/Views/Roles/Index.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Roles/Index.cshtml
@@ -45,8 +45,8 @@
         }
     </table>
     <div>
-        <input type="submit" class="btn btn-success" value="Aceptar" />
-        <a href="@Url.Action("Index", "Home")" type="button" class="btn btn-default">Cancelar</a>
+        <input type="submit" class="btn btn-primary" value="Aceptar" />
+        <a href="@Url.Action("Index", "Home")" type="button" class="btn btn-danger">Cancelar</a>
     </div>
 }
 
